<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout android:id="@+id/team_stats_summary_linear_layout"
            android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical" >
            <TextView
                android:id="@+id/team_stats_summary_match"
                android:text="@string/match_summary"
                style="@style/team_stats_summary_header"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic"
                    style="@style/medium_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    style="@style/medium_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opponent"
                    style="@style/medium_text"/>

                <TextView
                    android:id="@+id/team_stats_summary_ic_score"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:layout_height="wrap_content"
                    tools:text="1"
                    android:gravity="end"
                    style="@style/medium_text"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"
                    style="@style/medium_text"/>
                <TextView
                    android:id="@+id/team_stats_summary_opponent_score"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:layout_height="wrap_content"
                    tools:text="1"
                    style="@style/medium_text"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/apps"
                style="@style/team_stats_summary_header"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/sub_apps"
                style="@style/team_stats_summary_header"/>

        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <Button
            android:id="@+id/team_stats_summary_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/large_button_no_radius"
            android:text="@string/save_changes"/>
        <ProgressBar
            android:id="@+id/team_stats_summary_progress"
            android:layout_alignBottom="@+id/team_stats_summary_save"
            android:layout_alignTop="@+id/team_stats_summary_save"
            style="@style/progress_bar_with_progress_update"/>
    </RelativeLayout>
</LinearLayout>