<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:background="@color/colorBackground">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/change_password"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/change_password_repeat"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repeat_password"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <Button
            android:id="@+id/change_password_button"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/large_button"
            android:text="@string/change_password"/>
        <ProgressBar
            android:id="@+id/change_password_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/change_password_button"
            android:layout_alignTop="@+id/change_password_button"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>