<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp">
    <TextView
        android:id="@+id/player_info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/large_text"
        tools:text="Name"
        />

    <TextView
        android:id="@+id/player_info_position_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/medium_text"
        tools:text="Position in the nth team"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/player_info_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/shirt"
            android:scaleType="fitStart"
            android:paddingTop="12dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            android:paddingStart="16dp"
            android:paddingLeft="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/player_info_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points_week"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/player_info_points_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apps"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player_info_apps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_apps"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player_info_subs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goals"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player_info_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assists"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player_info_assists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motms"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player_info_motms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_sheets"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player_info_clean_sheets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellows"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player_info_yellows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reds"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player_info_reds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/own_goals"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/player_info_own_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>